--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -1,6 +1,9 @@
 {% extends "puput/base.html" %}
 {% load wagtailcore_tags wagtailimages_tags puput_tags %}
 
+{% block title %}{{ self.title }} | {{ blog_page.title }}{% endblock title %}
+{% block meta_title %}{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}{% endblock meta_title %}
+{% block meta_description %}{% if self.search_description %}{{ self.search_description }}{% else %}{{ self.body|striptags|truncatewords:20 }}{% endif %}{% endblock meta_description %}
 
 {% block content %}
     <article class="box page-content" data-blog-page-comments-url="{% url 'entry_page_update_comments' self.id %}">
