--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <article class="box page-content" data-blog-page-comments-url="{% url 'entry_page_update_comments' self.id %}">
+    <article class="box page-content" data-entry-page-update-comments-url="{% url 'entry_page_update_comments' self.id %}">
         {% include 'puput/entry_page_header.html' with entry=self %}
         <section>
             <span class="image featured">
@@ -13,7 +13,7 @@
         <section>
             {{ self.body|richtext}}
         </section>
-        {% comments %}
+        {% show_comments %}
     </article>
 {% endblock content %}
 
