Remove unnecessary commented import

--- a/puput/templates/puput/base.html
+++ b/puput/templates/puput/base.html
@@ -10,7 +10,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,100italic,100,400italic,500,500italic,700,900,700italic,900italic' rel='stylesheet' type='text/css'>
     {% compress css %}
-        <link href="{% static 'puput/css/bootstrap.css' %}" rel='stylesheet' type='text/css'/>
+        <link rel='stylesheet' href="{% static 'puput/css/bootstrap.min.css' %}" type='text/css'/>
         <link rel="stylesheet" href="{% static 'puput/css/font-awesome.min.css' %}">
         <link rel="stylesheet" href="{% static 'puput/css/style.css' %}"/>
         <link rel="stylesheet" href="{% static 'puput/css/main.css' %}"/>
@@ -98,8 +98,6 @@
     </div>
 </div>
 {% compress js %}
-    <script src="{% static 'puput/js/jquery.min.js' %}"></script>
-    <script src="{% static 'puput/js/responsive-nav.js' %}"></script>
     {% block extra_js %}{% endblock extra_js %}
 {% endcompress js %}
 </body>
