Remove endless_pagination dependency while importing template_tags

--- a/puput/templates/puput/base.html
+++ b/puput/templates/puput/base.html
@@ -1,4 +1,4 @@
-{% load static i18n wagtailcore_tags wagtailroutablepage_tags endless compress puput_tags %}
+{% load static i18n wagtailcore_tags wagtailroutablepage_tags compress puput_tags %}
 
 <!DOCTYPE HTML>
 <html>
