--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -6,7 +6,7 @@
 {% block meta_description %}{% if self.search_description %}{{ self.search_description }}{% else %}{{ self.body|striptags|truncatewords:20 }}{% endif %}{% endblock meta_description %}
 
 {% block content %}
-    <article class="box page-content" data-blog-page-comments-url="{% url 'entry_page_update_comments' self.id %}">
+    <article class="box page-content" data-entry-page-update-comments-url="{% url 'entry_page_update_comments' self.id %}">
         {% include 'puput/entry_page_header.html' with entry=self %}
         <section>
             <span class="image featured">
@@ -16,7 +16,7 @@
         <section>
             {{ self.body|richtext}}
         </section>
-        {% comments %}
+        {% show_comments %}
     </article>
 {% endblock content %}
 
