--- a/puput/templates/puput/related_entries.html
+++ b/puput/templates/puput/related_entries.html
@@ -3,7 +3,7 @@
 <div class="row relatedPosts">
     <section class="box features">
         <h2 class="post_title">
-            <span>{% trans 'Related Entries' %}</span>
+            <span>{% trans 'Related Posts' %}</span>
         </h2>
         <div class="itemPosts">
             <div class="row">
