Add wagtailuserbar on base.html to easy edit the content of pages

--- a/puput/templates/puput/base.html
+++ b/puput/templates/puput/base.html
@@ -1,5 +1,5 @@
-{% load static i18n wagtailcore_tags wagtailroutablepage_tags compress puput_tags %}
-
+{% load static i18n wagtailcore_tags wagtailroutablepage_tags wagtailuserbar compress puput_tags %}
+{% wagtailuserbar %}
 <!DOCTYPE HTML>
 <html>
 <head>
