Improve header image visualization

--- a/puput/static/puput/css/puput.less
+++ b/puput/static/puput/css/puput.less
@@ -138,12 +138,11 @@ a {
         }
     }
 }
-
 span img {
-    width: 100% !important;
-    margin-bottom: 15px;
+  width: auto;
+  max-width:100%;
+  margin-bottom: 15px;
 }
-
 h2{
   &.post_title{
     margin-bottom: 8px;
