--- a/puput/static/puput/css/puput.css
+++ b/puput/static/puput/css/puput.css
@@ -117,7 +117,8 @@ a:hover {
   outline: inherit;
 }
 span img {
-  width: 100% !important;
+  width: auto;
+  max-width:100%;
   margin-bottom: 15px;
 }
 h2.post_title {
