--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -10,7 +10,8 @@
         {% include 'puput/entry_page_header.html' with entry=self %}
         <section>
             <span class="image featured">
-                {% image self.header_image width-600 %}
+                {% image self.header_image fill-800x450 as header_image %}
+                <img alt="{{ self.header_image.title }}" src="{{ header_image.url }}">
             </span>
         </section>
         <section>
