--- a/puput/static/puput/css/puput.less
+++ b/puput/static/puput/css/puput.less
@@ -140,8 +140,7 @@ a {
     }
 }
 span img {
-  width: auto;
-  max-width:100%;
+  width:100%;
   margin-bottom: 15px;
 }
 h2{
@@ -325,6 +324,11 @@ p{
     span{
         background: @first;
         strong{color: #FFF;}
+        &.endless_separator{
+          background: transparent;
+          color: #358c8b;
+          font-size: 18px;
+        }
     }
 }
 .footer_bottom{
