Improvements on url structure for feeds urls.

--- a/puput/templates/puput/base.html
+++ b/puput/templates/puput/base.html
@@ -39,7 +39,7 @@
         <div class="col-sm-4 col-md-4">
             <div class="blog_sidebar">
                 <div class="rss-sitemap">
-                    <a href="{% url 'blog_page_feed' blog_page.slug %}" target="_blank" title="Rss">
+                    <a href="{% feeds_url blog_page %}" target="_blank" title="RSS">
                          <i class="fa fa-rss-square"></i> <span>Feed RSS</span>
                     </a>
                 </div>
