--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -17,6 +17,9 @@
         </section>
         <section>
             {{ self.body|richtext}}
+            {% for block in self.extra_body %}
+                {{ block }}
+            {% endfor %}
         </section>
         {% show_comments %}
     </article>
