Fix issue when displaying entries without images

--- a/puput/static/puput/css/puput.css
+++ b/puput/static/puput/css/puput.css
@@ -21,6 +21,13 @@ h6,
 p,
 span {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding-left: 0;
 }
 
 ul.links {
@@ -93,10 +100,6 @@ ul.sidebar ul li i {
     color: #43b1b0;
 }
 
-ul.sidebar li > ul{
-  padding-left: 0;
-}
-
 ul.sidebar ul li > ul li {
     padding-left: 20px;
 }
@@ -163,9 +166,6 @@ h3 {
 p {
     font-weight: 300;
     color: #666;
-}
-.responsive-object{
-  padding-bottom: 10px !important;
 }
 
 .about {
@@ -386,10 +386,6 @@ p {
 /* Menu */
 .menu li {
     margin: 0 0 3px;
-}
-
-.menu ul {
-    padding-left: 0;
 }
 
 .menu li a {
