--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -5,6 +5,21 @@
 {% block meta_title %}{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}{% endblock meta_title %}
 {% block meta_description %}{% if self.search_description %}{{ self.search_description }}{% else %}{{ self.body|striptags|truncatewords:20 }}{% endif %}{% endblock meta_description %}
 {% block canonical %}{% canonical_url entry=self %}{% endblock canonical %}
+{% block social_share %}
+    {% image self.header_image fill-800x450 as share_image %}
+    <meta property="og:title" content="{{ self.title }}" />
+    <meta property="og:description" content="{% if self.excerpt %}{{ self.excerpt|striptags }}{% else %}{{ self.body|striptags|truncatewords:20 }}{% endif %}" />
+    <meta property="og:url" content="{% canonical_url entry=self %}" />
+    {% if self.header_image %}
+    <meta property="og:image" content="{% image_url share_image.url %}" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="450" />
+    <meta name="twitter:image" content="{% image_url share_image.url %}" />
+    {% endif %}
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ self.title }}" />
+    <meta name="twitter:description" content="{% if self.excerpt %}{{ self.excerpt|striptags }}{% else %}{{ self.body|striptags|truncatewords:20 }}{% endif %}" />
+{% endblock social_share %}
 
 {% block content %}
     <article class="box page-content"
