Fix literal in blog_page.html

--- a/puput/templates/puput/blog_page.html
+++ b/puput/templates/puput/blog_page.html
@@ -49,7 +49,7 @@
                 </section>
             </article>
         {% empty %}
-            <span>{% trans 'No results founds.' %}</span>
+            <span>{% trans 'No results found.' %}</span>
         {% endfor %}
         <div class="pagination">
             {% show_paginator %}
