--- a/puput/templates/el_pagination/page_link.html
+++ b/puput/templates/el_pagination/page_link.html
@@ -1,3 +1,5 @@
 <a href="{{ page.path }}"
-    rel="{{ querystring_key }}{% if add_nofollow %} nofollow{% endif %}"
-    class="endless_page_link">{{ page.label|safe }}</a>
+   rel="{{ querystring_key }}{% if add_nofollow %} nofollow{% endif %}"
+   class="endless_page_link">
+    {{ page.label|safe }}
+</a>
